fix the overflow of page nav and switch to bulma columns

--- a/less/resets.less
+++ b/less/resets.less
@@ -476,8 +476,7 @@ object {
 ----------------------------------------------- */
 
 #content .site-navigation {
-	margin: 0 0 1.5em;
-	overflow: hidden;
+	margin-bottom: 1.5em;
 }
 
 /* =Widgets
