--- a/style.less
+++ b/style.less
@@ -38,13 +38,10 @@ and Blueprint http://www.blueprintcss.org/
 		}
 	}
 	#content .nav-previous {
-		float: left;
-		width: 50%;
+		text-align: left;
 	}
 	#content .nav-next {
-		float: right;
 		text-align: right;
-		width: 50%;
 	}
 }
 
